--- a/config/DiffNet.yaml
+++ b/config/DiffNet.yaml
@@ -1,7 +1,7 @@
 batch_size: 1024
 embed_size: 64
-layer_size: '[64]'
-lr: 0.001
-regs: 0.001
+num_layer: 1
+lr: 0.0001
+regs: 0.000001
 max_epoch: 5000
 valid_flag: 10
