update SBPR config

--- a/config/SBPR.yaml
+++ b/config/SBPR.yaml
@@ -1,9 +1,6 @@
 batch_size: 1024
 embed_size: 64
-lr: 0.01
-u_reg: 0.01
-p_reg: 0.01
-n_reg: 0.01
-s_reg: 0.02
-max_epoch: 50
-valid_flag: 1
+lr: 0.0005
+regs: 0.000001
+max_epoch: 1000
+valid_flag: 5
