--- a/config/DiffNet.yaml
+++ b/config/DiffNet.yaml
@@ -1,7 +1,9 @@
 batch_size: 1024
 embed_size: 64
 num_layer: 1
-lr: 0.0001
+max_lr: 0.0001
+step_step_size: 200
+reduce_rate: 0.1
 regs: 0.000001
 max_epoch: 5000
 valid_flag: 10
